--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
     "next": "^13.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@apollo/client": "^3.7.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.0.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
